/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.loopring.lightcone.proto";
package com.loopring.lightcone.proto.eth_jsonrpc;

import "google/protobuf/any.proto";

///////////////////////////////////////////
//
// ethereum original type
//
///////////////////////////////////////////

message Transaction {
    string hash = 1;
    string nonce = 2;
    string blockHash = 3;
    string blockNumber = 4;
    string transactionIndex = 5;
    string from = 6;
    string to =7;
    string value = 8;
    string gasPrice = 9 ;
    string gas = 10;
    string input = 11;
    string r = 12;
    string s = 13;
    string v = 14;
}

message Log {
    string logIndex = 1;
    string blockNumber = 2;
    string blockHash = 3;
    string transactionHash = 4;
    string transactionIndex = 5;
    string address = 6;
    string data = 7;
    repeated string topics = 8;
    bool removed = 9;
}

message TransactionReceipt {
    string blockHash = 1;
    string blockNumber = 2;
    string transactionHash = 3;
    string transactionIndex = 4;
    string from = 5;
    string to = 6;
    string contractAddress = 7;
    string cumulativeGasUsed = 8;
    string gasUsed = 9;
    repeated Log logs = 10;
    string logsBloom = 11;
    string root = 12;
    string status = 13;
}

message BlockWithTxHash {
    string number = 1;
    string hash = 2;
    string parentHash = 3;
    string nonce = 4;
    string sha3Uncles = 5;
    string logsBloom = 6;
    string transactionsRoot = 7;
    string stateRoot = 8;
    string receiptRoot = 9;
    string miner = 10;
    string difficulty = 11;
    string totalDifficulty = 12;
    string extraData = 13;
    string size = 14;
    string gasLimit = 15;
    string gasUsed = 16;
    string timestamp = 17;
    repeated string transactions = 18;
    repeated string uncles = 19;
}

message BlockWithTxObject {
    string number = 1;
    string hash = 2;
    string parentHash = 3;
    string nonce = 4;
    string sha3Uncles = 5;
    string logsBloom = 6;
    string transactionsRoot = 7;
    string stateRoot = 8;
    string receiptRoot = 9;
    string miner = 10;
    string difficulty = 11;
    string totalDifficulty = 12;
    string extraData = 13;
    string size = 14;
    string gasLimit = 15;
    string gasUsed = 16;
    string timestamp = 17;
    repeated Transaction transactions = 18;
    repeated string uncles = 19;
}

//message BlockWithTxAndReceipt {
//    Block block = 1;
//    repeated Transaction        transactions = 2;
//    repeated TransactionReceipt receipts = 3;
//}
//message CallArgs {
//    string from = 1;
//    string to = 2;
//    bytes gas = 3;
//    bytes gasPrice = 4;
//    bytes value = 5;
//    string data = 6;
//    bytes nonce = 7;
//}

///////////////////////////////////////////
//
// ethereum json rpc request & response
//
///////////////////////////////////////////

message JsonRPCRequest {
    string id = 1;
    string jsonrpc = 2;
    string method = 3;
    repeated string params = 4;
}

message JsonRPCResponse {
    string id = 1;
    string jsonrpc = 2;
    string result = 3;
}

message JsonRPCRequestSeq {
    repeated JsonRPCRequest req = 1;
}

///////////////////////////////////////////
//
// ethereum json rpc params
//
///////////////////////////////////////////

// eth_getBalance
message EthGetBalanceRequest {
    string address = 1;
    string tag = 2;
}
message EthGetBalanceResponse {
    string id = 1;
    string jsonrpc = 2;
    string result = 3;
}

// eth_getTransactionByHash
message GetTransactionByHashRequest {
    string hash = 1;
}
message GetTransactionByHashResponse {
    string id = 1;
    string jsonrpc = 2;
    Transaction result = 3;
}

// eth_getTransactionReceipt
message GetTransactionReceiptRequest {
    string hash = 1;
}
message GetTransactionReceiptResponse {
    string id = 1;
    string jsonrpc = 2;
    TransactionReceipt result = 3;
}

// eth_getBlockByNumber
message GetBlockWithTxHashByNumberRequest {
    string blockNumber = 1;
}
message GetBlockWithTxHashByNumberResponse {
    string id = 1;
    string jsonrpc = 2;
    BlockWithTxHash result = 3;
}

message GetBlockWithTxObjectByNumberRequest {
    string blockNumber = 1;
}
message GetBlockWithTxObjectByNumberResponse {
    string id = 1;
    string jsonrpc = 2;
    BlockWithTxObject result = 3;
}

// eth_getBlockByHash
message GetBlockWithTxHashByHashRequest {
    string blockHash = 1;
}
message GetBlockWithTxHashByHashResponse {
    string id = 1;
    string jsonrpc = 2;
    BlockWithTxHash result = 3;
}

message GetBlockWithTxObjectByHashRequest {
    string blockHash = 1;
}
message GetBlockWithTxObjectByHashResponse {
    string id = 1;
    string jsonrpc = 2;
    BlockWithTxObject result = 3;
}
